welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:17: error: Unmatched closing brace '}' ignored here
    		}
                ^alarmClock:22: error: Unmatched closing brace '}' ignored here
 }
 ^